added toggle for evaluation step

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ DB_CLUSTER_ID = ''
 
 # Optional. Container Image name for image creation
 IMAGE_NAME = 'mltrained'
+
+# Run Evaluation Step in AML pipeline
+RUN_EVALUATION = 'false'
