added override cancellation flag

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,6 @@ IMAGE_NAME = 'mltrained'
 
 # Run Evaluation Step in AML pipeline
 RUN_EVALUATION = 'false'
+
+# Set this flag to true to override cancellation in evaluation step
+OVERRIDE_CANCELLATION = 'false'
