--- a/.env.example
+++ b/.env.example
@@ -44,5 +44,5 @@ IMAGE_NAME = 'mltrained'
 # Run Evaluation Step in AML pipeline
 RUN_EVALUATION = 'false'
 
-# Set this flag to true to override cancellation in evaluation step
+# Set this flag to true to override cancellation in the evaluation step
 OVERRIDE_CANCELLATION = 'false'
