set the default to true

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ DB_CLUSTER_ID = ''
 IMAGE_NAME = 'mltrained'
 
 # Run Evaluation Step in AML pipeline
-RUN_EVALUATION = 'false'
+RUN_EVALUATION = 'true'
 
 # Set this flag to false from evaluation step to cancel pipeline run
 ALLOW_RUN_CANCEL = 'true'
