--- a/.env.example
+++ b/.env.example
@@ -44,5 +44,5 @@ IMAGE_NAME = 'mltrained'
 # Run Evaluation Step in AML pipeline
 RUN_EVALUATION = 'true'
 
-# Set this flag to false from evaluation step to cancel pipeline run
+# Set to true cancels the Azure ML pipeline run when evaluation criteria are not met.
 ALLOW_RUN_CANCEL = 'true'
