--- a/.pipelines/diabetes_regression-variables.yml
+++ b/.pipelines/diabetes_regression-variables.yml
@@ -42,7 +42,7 @@ variables:
     value: score.py
   - name: DATASET_NAME
     value: diabetes_ds
-  # You can set this variables at pipeline run. Check default values in ml_service\util\env_variables.py
+  # These are the default values set in ml_service\util\env_variables.py. Uncomment and override if desired.
   # - name: RUN_EVALUATION
   #   value: "true"
   # - name: ALLOW_RUN_CANCEL
