added toggle for evaluation step (#152)
  # These are the default values set in ml_service\util\env_variables.py. Uncomment and override if desired.
RUN_EVALUATION=true
ALLOW_RUN_CANCEL=true

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,9 @@ DB_CLUSTER_ID = ''
 
 # Optional. Container Image name for image creation
 IMAGE_NAME = 'mltrained'
+
+# Run Evaluation Step in AML pipeline
+RUN_EVALUATION = 'true'
+
+# Set to true cancels the Azure ML pipeline run when evaluation criteria are not met.
+ALLOW_RUN_CANCEL = 'true'
