--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,4 @@ whitelist_externals =
 passenv = HOME
 commands =
   flake8 --output-file=lint-testresults.xml --format junit-xml
-  pytest tests/unit --cov=code --cov-report=xml --junitxml=unit-testresults.xml
+  pytest tests/unit --cov=diabetes_regression --cov-report=xml --junitxml=unit-testresults.xml
