--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -15,5 +15,8 @@ RUN pip install conda-merge==0.1.5 && \
 ENV PATH /usr/local/envs/mlopspython_ci/bin:$PATH
 RUN /bin/bash -c "source activate mlopspython_ci"
 
-# Install Azure CLI ML extension
+# Install Azure CLI ML extension.
+# This also serves as workaround for https://github.com/conda/conda/issues/8537 (conda env create doesn't fail
+# if pip installation fails, for example due to different version specs in the various environment files).
+# The `az` command is not available if pip has not installed azure-cli.
 RUN az extension add -n azure-cli-ml
