--- a/diabetes_regression/.amlignore
+++ b/diabetes_regression/.amlignore
@@ -1,6 +1,9 @@
-# This file allows you to ignore some files/folders
-# when code is deploying to AML compute
-# The syntax of the file is the same as for .gitignore
+# To prevent unnecessary files from being included in
+# the snapshot, make an ignore file (.gitignore or .amlignore).
+# Place this file in the Snapshot directory and add the
+# filenames to ignore in it. The .amlignore file uses
+# the same syntax and patterns as the .gitignore file.
+# If both files exist, the .amlignore file takes precedence.
 
 # We use yml files to configure deployment,
 # but we are not deploying them to compute
