--- a/.pipelines/azdo-base-pipeline.yml
+++ b/.pipelines/azdo-base-pipeline.yml
@@ -17,4 +17,5 @@ steps:
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: 'coverage.xml'
+    reportDirectory: 'htmlcov'
     failIfCoverageEmpty: true
