Do not use conda-merge
* Move all 3 conda files to a single dir
* Do not use conda-merge
* Pin package versions

--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -4,12 +4,9 @@ LABEL org.label-schema.vendor = "Microsoft" \
       org.label-schema.url = "https://hub.docker.com/r/microsoft/mlopspython" \
       org.label-schema.vcs-url = "https://github.com/microsoft/MLOpsPython"
 
-COPY diabetes_regression/training/training_dependencies.yml diabetes_regression/scoring/scoring_dependencies.yml environment_setup/ci_environment.yml /setup/
+COPY diabetes_regression/ci_dependencies.yml /setup/
 
-RUN pip install conda-merge==0.1.5 && \
-    cd /setup && conda-merge training_dependencies.yml scoring_dependencies.yml ci_environment.yml > conda_merged.yml && \
-    echo "Generated conda environment definition:" && cat conda_merged.yml && \
-    conda env create -f conda_merged.yml
+RUN conda env create -f /setup/ci_dependencies.yml
 
 # activate environment
 ENV PATH /usr/local/envs/mlopspython_ci/bin:$PATH
