--- a/diabetes_regression/scoring/inference_config.yml
+++ b/diabetes_regression/scoring/inference_config.yml
@@ -1,6 +1,6 @@
 entryScript: score.py
 runtime: python
-condaFile: scoring_dependencies.yml
+condaFile: ../scoring_dependencies.yml
 extraDockerfileSteps:
 schemaFile:
 sourceDirectory:
