--- a/diabetes_regression/scoring_dependencies.yml
+++ b/diabetes_regression/scoring_dependencies.yml
@@ -25,12 +25,12 @@ dependencies:
   # get a prebuilt version and not require build tools for the install.
 - psutil=5.6 #latest
 
-- numpy
-- pandas
-- scikit-learn
+- numpy=1.18.1
+- pandas=1.0.0
+- scikit-learn=0.22.1
 
-- pip
+- pip=20.0.2
 - pip:
   # You must list azureml-defaults as a pip dependency
-  - azureml-defaults>=1.0.45
-  - inference-schema[numpy-support]
+  - azureml-defaults==1.0.85
+  - inference-schema[numpy-support]==1.0.1
