--- a/diabetes_regression/training_dependencies.yml
+++ b/diabetes_regression/training_dependencies.yml
@@ -8,10 +8,11 @@ dependencies:
 - numpy=1.18.1
 - pandas=1.0.0
 - scikit-learn=0.22.1
+#- r
+#- r-essentials
 #- tensorflow
 #- keras
 
 - pip=20.0.2
 - pip:
   - azureml-core==1.0.79
-  - azure-storage-blob==12.1.0
