Manage environments in conda YAML files (#158)
* .

* .

* Update code_test.py

* .

* Update Dockerfile

* Do not use conda-merge

* Move all 3 conda files to a single dir
* Do not use conda-merge
* Pin package versions

* PR review fixes

* Update Dockerfile

* PR review fixes

* Update training_dependencies.yml

* Update code_test.py

--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -4,11 +4,16 @@ LABEL org.label-schema.vendor = "Microsoft" \
       org.label-schema.url = "https://hub.docker.com/r/microsoft/mlopspython" \
       org.label-schema.vcs-url = "https://github.com/microsoft/MLOpsPython"
 
-       
+COPY diabetes_regression/ci_dependencies.yml /setup/
 
-COPY environment_setup/requirements.txt  /setup/
-	
-RUN apt-get update && apt-get install gcc -y && pip install --upgrade -r /setup/requirements.txt && \ 
-    conda install -c r r-essentials
+RUN conda env create -f /setup/ci_dependencies.yml
 
-CMD ["python"]
+# activate environment
+ENV PATH /usr/local/envs/mlopspython_ci/bin:$PATH
+RUN /bin/bash -c "source activate mlopspython_ci"
+
+# Verify conda installation.
+# This serves as workaround for https://github.com/conda/conda/issues/8537 (conda env create doesn't fail
+# if pip installation fails, for example due to a wrong package version).
+# The `az` command is not available if pip has not run (and installed azure-cli).
+RUN az --version
