move get_model_parameters to helper

--- a/diabetes_regression/config.json
+++ b/diabetes_regression/config.json
@@ -2,5 +2,13 @@
     "training":
     {
         "alpha": 0.4
+    },
+    "evaluation":
+    {
+
+    },
+    "scoring":
+    {
+        
     }
 }
