Manage AML environments from conda YAML files (#168)
* PR review fixes

* Update Dockerfile

* .

* Update deploy_web_service.py

* Update deploy_web_service.py

* PR review fixes

* PR review fixes

* PR review fixes

* Update training_dependencies.yml

* Linting fixes

* Fixed merge

* Update code_test.py

* Simplified environment management, restored deploy task

* Simplified environment management, restored deploy task

* Fixed doc for new file path

* Added comments

Co-authored-by: Sushant Divate <sudivate@microsoft.com>

--- a/diabetes_regression/scoring/inference_config.yml
+++ b/diabetes_regression/scoring/inference_config.yml
@@ -1,6 +1,6 @@
 entryScript: score.py
 runtime: python
-condaFile: ../scoring_dependencies.yml
+condaFile: ../conda_dependencies.yml
 extraDockerfileSteps:
 schemaFile:
 sourceDirectory:
