--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -10,5 +10,6 @@ COPY environment_setup/requirements.txt  /setup/
 	
 RUN apt-get update && apt-get install gcc -y && pip install --upgrade -r /setup/requirements.txt && \ 
     conda install -c r r-essentials
+RUN chmod -R 777 /usr/local/lib/python3.7    
 
 CMD ["python"]
