--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -10,10 +10,10 @@ COPY diabetes_regression/ci_dependencies.yml /setup/
 RUN conda env create -f /setup/ci_dependencies.yml
 
 # activate environment
-#SHELL ["conda", "run", "-n", "mlopspython_ci", "/bin/bash", "-c"]
+SHELL ["conda", "run", "-n", "mlopspython_ci", "/bin/bash", "-c"]
 # Alternate Way to activate Conda Env
-ENV PATH /usr/local/envs/mlopspython_ci/bin:$PATH
-RUN /bin/bash -c "source activate mlopspython_ci"
+#ENV PATH /usr/local/envs/mlopspython_ci/bin:$PATH
+#RUN /bin/bash -c "source activate mlopspython_ci"
 
 # Verify conda installation.
 # This serves as workaround for https://github.com/conda/conda/issues/8537 (conda env create doesn't fail
