--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -13,4 +13,5 @@ RUN conda update -n base -c defaults conda && \
     conda install python=3.7.5 && \
     conda env create -f /setup/ci_dependencies.yml && \
     /bin/bash -c "source activate mlopspython_ci" && \
-    az --version
+    az --version && \
+    chmod -R 777 /usr/local/envs/mlopspython_ci/lib/python3.7
