updated env name

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ SOURCES_DIR_TRAIN = 'diabetes_regression'
 DATASET_NAME = 'diabetes_ds'
 DATASTORE_NAME = 'datablobstore'
 DATAFILE_NAME = 'diabetes.csv'
-AML_ENV_NAME = 'diabetes_regression_sklearn'
+AML_ENV_NAME = 'diabetes_regression_env'
 
 # Optional. Used by a training pipeline with R on Databricks
 DB_CLUSTER_ID = ''
