run unit tests in any case

--- a/.pipelines/azdo-base-pipeline.yml
+++ b/.pipelines/azdo-base-pipeline.yml
@@ -5,6 +5,7 @@ steps:
 
 - script: |   
    python -m pytest . --cov=diabetes_regression --cov-report=html --cov-report=xml --junitxml=unit-testresults.xml
+  condition: succeededOrFailed()
   displayName: 'Run unit tests'
 
 - task: PublishTestResults@2
