--- a/.pipelines/azdo-helm-upgrade.yml
+++ b/.pipelines/azdo-helm-upgrade.yml
@@ -1,8 +1,9 @@
+# Pipeline template for deploying / upgrading using Helm.
 parameters:
   chartPath: ''
   releaseName: '' 
   overrideValues: ''
-    
+
 steps:
 - template: azdo-helm-install.yml
 - task: HelmDeploy@0
