--- a/.pipelines/diabetes_regression-ci-build-train.yml
+++ b/.pipelines/diabetes_regression-ci-build-train.yml
@@ -1,3 +1,4 @@
+# CI pipeline that builds, trains, tests, and deploys the diabetes model.
 pr: none
 trigger:
   branches:
@@ -84,6 +85,7 @@ stages:
     timeoutInMinutes: 0
     steps:
     - template: diabetes_regression-template-get-model-version.yml
+
 - stage: 'Deploy_ACI'
   displayName: 'Deploy to ACI'
   dependsOn: Trigger_AML_Pipeline
