Updated comments to address review feedback

--- a/.pipelines/azdo-base-pipeline.yml
+++ b/.pipelines/azdo-base-pipeline.yml
@@ -1,4 +1,4 @@
-# Pipeline template to run linting, unit tests, code coverage, and publish the results.
+# Pipeline template to run linting, unit tests with code coverage, and publish the results.
 steps:
 - script: |   
    flake8 --output-file=lint-testresults.xml --format junit-xml
