--- a/.pipelines/azdo-pr-build-train.yml
+++ b/.pipelines/azdo-pr-build-train.yml
@@ -1,4 +1,4 @@
-# PR pipeline for running CI on PRs to master.
+# Pipeline to run basic code quality tests as part of pull requests to the master branch.
 trigger: none
 pr:
   branches:
