--- a/.pipelines/azdo-pr-build-train.yml
+++ b/.pipelines/azdo-pr-build-train.yml
@@ -1,4 +1,10 @@
 # Pipeline to run basic code quality tests as part of pull requests to the master branch.
+
+resources:
+  containers:
+  - container: mlops
+    image: mcr.microsoft.com/mlops/python:latest
+
 trigger: none
 pr:
   branches:
@@ -8,7 +14,7 @@ pr:
 pool:
   vmImage: 'ubuntu-latest'
 
-container: mcr.microsoft.com/mlops/python:latest  
+container: mlops
 
 variables:
 - template: diabetes_regression-variables.yml
