adding comments for variables

--- a/.pipelines/diabetes_regression-ci-image.yml
+++ b/.pipelines/diabetes_regression-ci-image.yml
@@ -21,7 +21,7 @@ container: mcr.microsoft.com/mlops/python:latest
 variables:
 - group: devopsforai-aml-vg
 - name: 'SCORE_SCRIPT'
-  value: 'scoreB.py'
+  value: 'scoring/scoreB.py'
 
 steps:
 - task: AzureCLI@1
