--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,6 @@ BUILD_BUILDID = '001'
 # Azure ML Workspace Variables
 WORKSPACE_NAME = 'aml-workspace'
 EXPERIMENT_NAME = ''
-SCRIPT_FOLDER = './'
 
 # AML Compute Cluster Config
 AML_COMPUTE_CLUSTER_NAME = 'train-cluster'
@@ -32,6 +31,7 @@ EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
 REGISTER_SCRIPT_PATH = 'register/register_model.py'
 SOURCES_DIR_TRAIN = 'diabetes_regression'
 DATASET_NAME = 'diabetes_ds'
+SCORE_SCRIPT = 'scoring/score.py'
 
 # Optional. Used by a training pipeline with R on Databricks
 DB_CLUSTER_ID = ''
