update default model name

--- a/.pipelines/diabetes_regression-variables.yml
+++ b/.pipelines/diabetes_regression-variables.yml
@@ -26,7 +26,7 @@ variables:
   - name: TRAINING_PIPELINE_NAME
     value: "diabetes-Training-Pipeline"
   - name: MODEL_NAME
-    value: diabetes_model.pkl
+    value: diabetes_regression_model.pkl
 
   # AML Compute Cluster Config
   - name: AML_COMPUTE_CLUSTER_CPU_SKU
