Rename pipeline and pipeline template YAMLs to new convention

--- a/.pipelines/diabetes_regression-ci-image.yml
+++ b/.pipelines/diabetes_regression-ci-image.yml
@@ -1,4 +1,4 @@
-# Builds the container image that is used by other pipelines for scoring.
+# Pipeline for building the container image that is used by other pipelines for scoring.
 
 resources:
   containers:
